--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.10",
+    "@types/yargs": "^17.0.31",
+    "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "yargs": "^17.7.2"
   }
 }
