NODE - Added default steps to start using app

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "tsc": "tsc",
-    "start": "tsc &&node build/index.js",
+    "start": "tsc && node build/index -b=5 -l=true -t=19",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
